Make prevBtn align correctly

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -503,8 +503,6 @@ body {
 }
 .prev-btn {
     margin-right: auto;
-    display: flex;
-    flex-direction: row-reverse;
 }
 
 .next-btn {
